# QTPEtTracker

.github/workflows/: build.yml  build.yml.txt
kursovaya11/: CMakeLists.txt  coverage.functions.html  coverage.html
kursovaya11/tests/: CMakeLists.txt
tests/: test_event.cpp  test_pet.cpp
